[build-system]
requires = ["setuptools>=69.1", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "pubmed_parser"
description = "A python parser for Pubmed Open-Access Subset and MEDLINE XML repository"
readme = "README.md"
license = {text = "MIT (c) 2015 - 2024 Titipat Achakulvisut, Daniel E. Acuna"}
authors = [
    {name = "Titipat Achakulvisut", email = "my.titipat@gmail.com"}
]
maintainers = [
    {name = "Titipat Achakulvisut", email = "my.titipat@gmail.com"},
    {name = "Michael E. Rose", email = "Michael.Ernst.Rose@gmail.com"}
]
classifiers = [
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Natural Language :: English",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: Unix",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11"
]
keywords = [
    "Python",
    "MEDLINE",
    "PubMed",
    "Biomedical corpus",
    "Natural Language Processing"
]
dependencies = [
    "lxml",
    "unidecode",
    "requests",
    "six",
    "numpy"
]
dynamic = ["version"]

[project.optional-dependencies]
tests = [
    "pytest",
    "pytest-cov"
]
docs = [
    "sphinx",
    "sphinx_rtd_theme",
    "sphinx-gallery"
]

[project.urls]
homepage = "https://github.com/titipata/pubmed_parser"
download = "https://github.com/titipata/pubmed_parser.git"
documentation = "http://titipata.github.io/pubmed_parser"
bug_tracker = "https://github.com/titipata/pubmed_parser/issues"

[tool.setuptools.package-data]
"pubmed_parser.data" = ["*.xml.gz", "*.nxml", "*.txt"]

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools_scm]
